feat(phase-08): Complete Day 54 Docker, CI/CD & Cloud Deployment